# anki-tools

./: .gitignore  AGENTS.md  README.md  SPEC_APKG_AUDIO.md  SPEC_RANK_SENTENCES.md  anki_package.py  back.html  card.css  card.html  cli.py  fix_pinyin.py  front.html  process_deck.py  pyproject.toml  rank_sentences.py  ranked_sentences.csv  reorder_deck.py
.beads/: daemon-error  issues.jsonl
anki-reader/: .gitignore  QUICK_START.md  README.md  RESEARCH.md  TEST_COVERAGE.md  compare_methods.py  demo_audio_extraction.py  examples_anki_export.py  examples_ankipandas.py  examples_ankisync2.py  main.py  pyproject.toml  read_anki.py  test_anki_export.py  test_audio_extraction.py
anki_tools/: __init__.py  cli.py  jyutping.py  package.py  pinyin.py  rank.py  reorder.py
apkg/: 16000_French_Sentences.rank.csv  6000_French_Sentences_w_Audio.rank.csv  LTL Cantonese Deck Level 1 - Short.rank.csv  Neri's Chinese Sents Part 2.rank.csv  Neri's Chinese Sents Part 2_summary.csv  zh_Chinese_Commonly_Used_Sentences_w_Word_Explanations.rank.csv  zh_Chinese_Commonly_Used_Sentences_w_Word_Explanations_summary.csv
scripts/: build_english_arabic.py  swadesh_ar_data.py  swadesh_hi_data.py
tests/: A_Course_in_Contemporary_Chinese_1.apkg  A_Course_in_Contemporary_Chinese_1_fixed.apkg  __init__.py  conftest.py  test_audio_extraction.py  test_audio_statistics.py  test_card_audio_linking.py  test_card_deletion.py  test_integration.py  test_media_mapping.py  test_rank_sentences.py
vocab/: english-arabic.csv  english-cantonese.csv  english-german.csv  english-greek.csv  english-hindi.csv  (+4 more)
