[project]
name = "anki-tools"
version = "0.1.0"
description = "Read, edit, and manipulate Anki flashcard packages (.apkg files)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.5.1",
    "genanki>=0.13.1",
    "gtts>=2.5.4",
    "jieba>=0.42.1",
    "pypinyin>=0.55.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
    "zstandard>=0.25.0",
]

[project.scripts]
anki = "anki_tools.cli:main"

[tool.setuptools.packages.find]
include = ["anki_tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
